--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@ torch==2.3.1
 python-docx==1.1.2
 accelerate==0.31.0
 bitsandbytes==0.43.1
-nvidia-ml-py3
-streamlit
-langchain
-langchain_community 
-langchain_chroma
+streamlit==1.36.0
+langchain==0.2.6
+langchain_community==0.2.6
+langchain_chroma==0.1.2
 langchainhub==0.1.20
