--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ langchain==0.2.6
 langchain_community==0.2.6
 langchain_chroma==0.1.2
 langchainhub==0.1.20
+langchain_text_splitters==0.2.2
+langchain-core==0.2.10
