--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ langchain_chroma==0.1.2
 langchainhub==0.1.20
 langchain_text_splitters==0.2.2
 langchain-core==0.2.10
+sentence-transformers==3.0.1
